2008-10-24  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Makefile.am:
	* src/lib/evil_util.c:
	* src/lib/evil_private.h:
	move _evil_stdlib_error_display() from evil_stdlib.c
	to evil_util.c and rename it to _evil_error_display()

	* src/lib/evil_stdlib.c:
	* src/lib/evil_unistd.c:
	use _evil_error_display()

	* src/lib/Evil.h:
	overload fopen for mingw32ce

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	add evil_open to overload fopen (for mingw32ce

2008-10-22  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/lib/Makefile.am:
	store cpp flags in a variable instead of using an
	automake conditional

	* src/bin/Makefile.am:
	* src/bin/evil_suite.c:
	* src/bin/evil_test_memcpy.c:
	add test for getenv / setenv. More tests on it will
	come later

	* src/lib/evil_stdlib.c:
	fix getenv code and minor cleanup

2008-10-21  Vincent Torri  <doursse at users dot sf dot net>

	* m4/ac_attribute.m4:
	use newer file from PROTO/autotools

	* src/lib/dlfcn/dlfcn.c:
	* src/lib/evil_mman.c:
	no need to define __UNUSED__ anymore with the new m4 macro

	* src/lib/Makefile.am:
	* src/lib/evil.c:
	remove useless file

2008-10-21  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	use getcwd() from evil_unistd.c

2008-10-21  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Makefile.am:
	* src/lib/evil_time.c:
	add tzset implementation ofr mingw32ce (does nothing...),
	needed for embryo

	* src/lib/evil_stdio.h:
	formatting

2008-10-20  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/evil_suite.c:
	* src/bin/evil_suite.h:
	* src/bin/evil_test_memcpy.c:
	* src/bin/evil_test_memcpy.h:
	clean suite and memcpy test code

2008-10-19  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/errno.h:
	* src/lib/evil_errno.c:
	export errno symbol.

	* src/lib/evil_string.c:
	* src/lib/evil_string.h:
	add a (slow) implementation of ffs(). Needed for eina
